include/rpc/object.h

struct rpc_object;
/**
 * Definition of data object pointer.
 */
typedef struct rpc_object *rpc_object_t;
/**
 * Definition of array compare block type.
 *
 * Body of block is being executed for pairs of array's members
 * during sort operation.
 *
 * The block should return a negative integer
 * if the first value comes before the second, 0 if they are equal,
 * or a positive integer if the first value comes after the second.
 *
 * @param o1 A value.
 * @param o2 A value to compare with.
 * @return Negative value if a < b ; zero if a = b ; positive value if a > b.
 */
typedef int (^rpc_array_cmp_t)(rpc_object_t o1, rpc_object_t o2);