include/rpc/service.h

/**
 * RPC context structure definition.
 */
struct rpc_context;
/**
 * RPC context structure pointer definition.
 */
typedef struct rpc_context *rpc_context_t;
struct rpc_instance;
typedef struct rpc_instance *rpc_instance_t;
/**
 * Definition of RPC method block type.
 */
typedef rpc_object_t (^rpc_function_t)(void *cookie, rpc_object_t args);
/**
 *
 */
typedef rpc_object_t (^rpc_property_getter_t)(void *cookie);
/**
 *
 */
typedef void (^rpc_property_setter_t)(void *cookie, rpc_object_t value);
enum rpc_if_member_type
{
	RPC_MEMBER_EVENT,
	RPC_MEMBER_PROPERTY,
	RPC_MEMBER_METHOD,
};