bindings/python/librpc.pxd


    rpc_client_t rpc_client_create(const char *uri, rpc_object_t params)
    rpc_connection_t rpc_client_get_connection(rpc_client_t client)
    void rpc_client_close(rpc_client_t client)


cdef extern from "rpc/server.h" nogil:
    ctypedef struct rpc_server:
        pass

    ctypedef rpc_server *rpc_server_t

    rpc_server_t rpc_server_create_ex(const char *uri, rpc_context_t context, rpc_object_t params);
    int rpc_server_resume(rpc_server_t server)
    int rpc_server_close(rpc_server_t server)
    void rpc_server_broadcast_event(rpc_server_t server, const char *path, const char *interface, const char *name, rpc_object_t args)
    int rpc_server_sd_listen(rpc_context_t context, rpc_server_t **servers, rpc_object_t *rest)

cdef extern from "rpc/bus.h" nogil:
    ctypedef enum rpc_bus_event_t:
        RPC_BUS_ATTACHED
        RPC_BUS_DETACHED

    cdef struct rpc_bus_node:
        const char *rbn_name
        const char *rbn_description
        const char *rbn_serial
        uint32_t rbn_address

    void *RPC_BUS_EVENT_HANDLER(rpc_bus_event_handler_f fn, void *arg)

    int rpc_bus_open()
    int rpc_bus_close()
    int rpc_bus_ping(const char *name)
    int rpc_bus_enumerate(rpc_bus_node **result)
    int rpc_bus_free_result(rpc_bus_node *result)
    void rpc_bus_register_event_handler(void *handler)
    void rpc_bus_unregister_event_handler()


cdef extern from "rpc/serializer.h" nogil:
    bint rpc_serializer_exists(const char *serializer)
    rpc_object_t rpc_serializer_load(const char *serializer, const void *frame, size_t len)
    int rpc_serializer_dump(const char *serializer, rpc_object_t obj, void **framep, size_t *lenp)


cdef extern from "rpc/query.h" nogil:
    cdef struct rpc_query_params:
        bint single
        bint count
        uint64_t offset
        uint64_t limit
        bint reverse
        void *sort
        void *callback

    ctypedef struct rpc_query_iter:
        pass

    ctypedef rpc_query_iter *rpc_query_iter_t
    ctypedef rpc_query_params *rpc_query_params_t

    void *RPC_QUERY_CB(rpc_query_cb_f fn, void *arg)

    rpc_object_t rpc_query_get(rpc_object_t object, const char *path, rpc_object_t default_val)
    void rpc_query_set(rpc_object_t object, const char *path, rpc_object_t value, bint steal)
    void rpc_query_delete(rpc_object_t object, const char *path)
    bint rpc_query_contains(rpc_object_t object, const char *path)
    rpc_query_iter_t rpc_query(rpc_object_t object, rpc_query_params_t params, rpc_object_t rules)
    bint rpc_query_next(rpc_query_iter_t iter, rpc_object_t *chunk)
    void rpc_query_iter_free(rpc_query_iter_t iter)


cdef extern from "rpc/typing.h" nogil:
    ctypedef struct rpct_type_t:
        pass

    ctypedef struct rpct_typei_t:
        pass

    ctypedef struct rpct_member_t:
        pass

    ctypedef struct rpct_interface_t:
        pass

    ctypedef struct rpct_if_member_t:
        pass

    ctypedef struct rpct_argument_t:
        pass

    ctypedef enum rpct_class_t:
        RPC_TYPING_STRUCT
        RPC_TYPING_UNION
        RPC_TYPING_ENUM
        RPC_TYPING_TYPEDEF
        RPC_TYPING_CONTAINER
        RPC_TYPING_BUILTIN

    void *RPCT_TYPE_APPLIER(rpct_type_applier_f fn, void *arg)
    void *RPCT_MEMBER_APPLIER(rpct_member_applier_f fn, void *arg)
    void *RPCT_INTERFACE_APPLIER(rpct_interface_applier_f fn, void *arg)
    void *RPCT_IF_MEMBER_APPLIER(rpct_if_member_applier_f fn, void *args)

    void rpct_init(bint load_system_types)
    int rpct_read_file(const char *path)
    int rpct_load_types(const char *path)
    int rpct_load_types_dir(const char *path)
    int rpct_download_idl(rpc_connection_t conn)

    rpct_interface_t rpct_find_interface(const char *name)
    rpct_if_member_t rpct_find_if_member(const char *interface, const char *member)

    bint rpct_types_apply(void *applier)
    bint rpct_members_apply(rpct_type_t type, void *applier)
    bint rpct_interface_apply(void *applier)
    bint rpct_if_member_apply(rpct_interface_t iface, void *applier)

    const char *rpct_type_get_name(rpct_type_t type)
    const char *rpct_type_get_module(rpct_type_t type)
    const char *rpct_type_get_description(rpct_type_t type)
    rpct_type_t rpct_type_get_parent(rpct_type_t type)
    rpct_typei_t rpct_type_get_definition(rpct_type_t type)

    rpct_class_t rpct_type_get_class(rpct_type_t type)
    int rpct_type_get_generic_vars_count(rpct_type_t type)
    const char *rpct_type_get_generic_var(rpct_type_t type, int index)

    bint rpct_typei_get_proxy(rpct_typei_t typei)
    const char *rpct_typei_get_proxy_variable(rpct_typei_t typei)
    rpct_type_t rpct_typei_get_type(rpct_typei_t typei)
    const char *rpct_typei_get_canonical_form(rpct_typei_t typei)
    rpct_typei_t rpct_typei_get_generic_var(rpct_typei_t typei, const char *name)

    rpct_typei_t rpct_typei_get_member_type(rpct_typei_t typei, rpct_member_t member)

    const char *rpct_member_get_name(rpct_member_t member)
    const char *rpct_member_get_description(rpct_member_t member)
    rpct_typei_t rpct_member_get_typei(rpct_member_t member)

    const char *rpct_interface_get_name(rpct_interface_t member)
    const char *rpct_interface_get_description(rpct_interface_t member)

    const char *rpct_if_member_get_name(rpct_if_member_t member)
    const char *rpct_if_member_get_description(rpct_if_member_t member)
    rpc_if_member_type rpct_if_member_get_type(rpct_if_member_t member)
    rpct_typei_t rpct_method_get_return_type(rpct_if_member_t method)
    int rpct_method_get_arguments_count(rpct_if_member_t method)
    rpct_argument_t rpct_method_get_argument(rpct_if_member_t method, int index)
    rpct_typei_t rpct_property_get_type(rpct_if_member_t prop)

    const char *rpct_argument_get_name(rpct_argument_t arg)
    const char *rpct_argument_get_description(rpct_argument_t arg)
    rpct_typei_t rpct_argument_get_typei(rpct_argument_t arg)

    rpct_typei_t rpct_get_typei(rpc_object_t instance)
    rpc_object_t rpct_get_value(rpc_object_t instance)

    rpct_typei_t rpct_new_typei(const char *decl)
    rpc_object_t rpct_new(const char *decl, rpc_object_t object)
    rpc_object_t rpct_newi(rpct_typei_t typei, rpc_object_t object)
    rpc_object_t rpct_set_typei(rpct_typei_t typei, rpc_object_t object)

    rpc_object_t rpct_serialize(rpc_object_t object)
    rpc_object_t rpct_deserialize(rpc_object_t object)
    bint rpct_validate(rpct_typei_t typei, rpc_object_t obj, rpc_object_t *errors)


cdef extern from "rpc/rpcd.h" nogil:
    rpc_client_t rpcd_connect_to(const char *rpcd_uri, const char *name)
    int rpcd_register(const char *uri, const char *name, const char *description)


cdef class Object(object):
    cdef rpc_object_t obj
    cdef object ref

    @staticmethod
    cdef wrap(rpc_object_t ptr, bint retain=*)
    cdef rpc_object_t unwrap(self) nogil


cdef class Context(object):
    cdef rpc_context_t context
    cdef bint borrowed
    cdef object methods
    cdef object instances

    @staticmethod
    cdef Context wrap(rpc_context_t ptr)
    cdef rpc_context_t unwrap(self) nogil


cdef class Instance(object):
    cdef readonly Context context
    cdef rpc_instance_t instance
    cdef object properties
    cdef public arg

    @staticmethod
    cdef Instance wrap(rpc_instance_t ptr)
    cdef rpc_instance_t unwrap(self) nogil
    @staticmethod
    cdef rpc_object_t c_property_getter(void *cookie) with gil
    @staticmethod
    cdef void c_property_setter(void *cookie, rpc_object_t value) with gil


cdef class Service(object):
    cdef readonly Instance instance
    cdef object methods
    cdef object properties
    cdef object interfaces


cdef class RemoteObject(object):
    cdef readonly object client
    cdef readonly object path
    cdef readonly object name
    cdef readonly object description
    cdef readonly object interfaces


cdef class RemoteInterface(object):
    cdef readonly object client
    cdef readonly object instance
    cdef readonly object path


cdef class RemoteProperty(object):
    cdef readonly object name
    cdef readonly object interface
    cdef readonly object typed


cdef class RemoteEvent(object):
    cdef object handlers
    cdef readonly object name
    cdef readonly object interface
    cdef readonly object typed

    cdef emit(self, Object args)


cdef class TypeInstance(object):
    cdef rpct_typei_t rpctypei

    @staticmethod
    cdef TypeInstance wrap(rpct_typei_t typei)
    cdef rpct_typei_t unwrap(self) nogil


cdef class Interface(object):
    cdef rpct_interface_t c_iface

    @staticmethod
    cdef Interface wrap(rpct_interface_t ptr)
    cdef rpct_interface_t unwrap(self) nogil
    @staticmethod
    cdef bint c_iter(void *arg, rpct_if_member_t val)


cdef class InterfaceMember(object):
    cdef rpct_if_member_t c_member

    @staticmethod
    cdef wrap(rpct_if_member_t ptr)
    cdef rpct_if_member_t unwrap(self) nogil


cdef class BaseTypingObject(object):
    cdef readonly Object __object__
    cdef readonly TypeInstance __typei__

    @staticmethod
    cdef construct_struct(TypeInstance typei)
    @staticmethod
    cdef construct_union(TypeInstance typei)
    @staticmethod
    cdef construct_enum(TypeInstance typei)


cdef class Call(object):
    cdef readonly Connection connection
    cdef rpc_call_t call

    @staticmethod
    cdef Call wrap(rpc_call_t ptr)
    cdef rpc_call_t unwrap(self) nogil


cdef class Connection(object):
    cdef public bint unpack
    cdef rpc_connection_t connection
    cdef object error_handler
    cdef object event_handler
    cdef object ev_handlers
    cdef bint borrowed

    @staticmethod
    cdef Connection wrap(rpc_connection_t ptr)
    cdef rpc_connection_t unwrap(self) nogil
    @staticmethod
    cdef void c_ev_handler(void *arg, const char *path, const char *inteface, const char *name, rpc_object_t args) with gil
    @staticmethod
    cdef void c_prop_handler(void *arg, rpc_object_t value) with gil
    @staticmethod
    cdef void c_error_handler(void *arg, rpc_error_code_t code, rpc_object_t args) with gil


cdef class Client(Connection):
    cdef rpc_client_t client
    cdef object uri

    @staticmethod
    cdef Client wrap(rpc_client_t ptr)


cdef class Bus(object):
    cdef object event_fn

    @staticmethod
    cdef void c_ev_handler(void *arg, rpc_bus_event_t ev, rpc_bus_node *bn) with gil


cdef class QueryIterator(object):
    cdef rpc_query_iter_t iter
    cdef object sort_cb
    cdef object postprocess_cb
    cdef object cnt
    cdef object unpack

    @staticmethod
    cdef QueryIterator wrap(rpc_query_iter_t iter, object sort, object cb, object unpack)
    @staticmethod
    cdef rpc_object_t c_callback(void *arg, rpc_object_t object)
    @staticmethod
    cdef int c_sort(void *arg, rpc_object_t o1, rpc_object_t o2)
